test/good/arrays/empty11.px

a = true ? [] : [true]
b = false ? [false] : []
print a == b
print a == [true]
