test/bad/basic/assg02.px

b = 0
a = b = false
